--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     background-color:#E1E4E3;
 }
 
-#contenedor1, #contenedor2 {
+#container1, #container2 {
     display: flex; 
     height: 50%;
     background-color:#F4F7F5;
@@ -24,13 +24,13 @@ body {
 
 }
 
-.fila1, .fila2 {
+.row1, .row2 {
     display: flex;
     align-items: center;
     margin-top: 5%;
 }
 
-.caja1, .caja2 {
+.box1, .box2 {
     width: 50%;
     text-align: center;
     margin: 0 10%; 
@@ -39,20 +39,20 @@ body {
     border-style: inset;
 }
 
-.caja1 img {
+.box1 img {
     max-width: 80%;
     max-height: 100%;
     margin-top: 5%;
     object-fit: cover;
 }
 
-.imagen {
+.image {
     width: 50%;
-    height: 100%;
+    height: 50%;
     margin: 10%;
 }
 
-.imagen img {
+.image img {
     max-width: 100%;
     height: 30%;
     display: block;
@@ -74,7 +74,7 @@ p {
 
 
 
-.container {
+.container_footer {
     height: 0%;
     display: flex;
     justify-content:end;
