--- a/style.css
+++ b/style.css
@@ -43,13 +43,14 @@ body {
     max-width: 80%;
     max-height: 100%;
     margin-top: 5%;
-    object-fit: cover;
+    align-items: center;
 }
 
 .image {
-    width: 50%;
-    height: 50%;
+    width: 80%;
+    height: 80%;
     margin: 10%;
+    display: flex;
 }
 
 .image img {
@@ -60,10 +61,12 @@ body {
 
 h2 {
     text-decoration: underline overline; 
+    text-align: center;
 }
 
 h3 {
     border-style: double;
+    text-align: center;
 }
 
 p {
